force-app/main/default/objects/CourseNew__c/CourseNew__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>