force-app/main/default/objects/CourseNew__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>