force-app/main/default/objects/CourseNew__c/fields/Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollment__c</fullName>
    <label>Total Enrollment</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>