force-app/main/default/objects/CourseNew__c/fields/Total_Revenue_del1__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_del1__c</fullName>
    <label>Total Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>