force-app/main/default/objects/CourseNew__c/validationRules/FeesAmountValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FeesAmountValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Fees__c &lt; 5000  &amp;&amp; Fees__c &gt; 50000</errorConditionFormula>
    <errorMessage>Fees should be greater than 5000</errorMessage>
</ValidationRule>